[package]
name = "audio_demo-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.4", features = ["blocking"] }
rodio = { version = "0.18.0", features = ["wasm-bindgen"] }
thiserror = "1.0.61"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["tauri"]}

[workspace]
members = ["src-tauri"]
